--- a/flash-frontend/src/index.css
+++ b/flash-frontend/src/index.css
@@ -4,7 +4,7 @@
   --text-light: #333333;
   --background-dark: #222222;
   --text-dark: #f0f0f0;
-  --afg-blue: #001051;
+  --afg-blue: #0a2557;
   --blue-light: #021359;
 }
 
