--- a/flash-frontend/src/index.css
+++ b/flash-frontend/src/index.css
@@ -82,3 +82,12 @@ body.dark .wizard-panel {
   border: 0;
   border: 1px solid rgb(50 64 117) !important;
 }
+
+
+.rs-panel {
+  border-radius: 6px;
+  overflow: hidden;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
