--- a/flash-frontend/src/index.css
+++ b/flash-frontend/src/index.css
@@ -78,9 +78,40 @@ body.dark .wizard-panel {
   border: 1px solid red;
   background-color: transparent !important;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.01);
-  min-height: 400px;
   border: 0;
   border: 1px solid rgb(50 64 117) !important;
 }
 
 
+body.dark .selection-card {
+  padding: 20px;
+  border-radius: var(--border-radius-xl);
+  border: 0.8px solid #3f609f;
+  cursor: pointer;
+  transition: all 0.25s ease;
+  background-color: #3e609f;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  height: 100%;
+  display: flex
+;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+}
+
+
+body.dark .selection-icon-container {
+  font-size: 32px;
+  margin-bottom: 5px;
+  width: 70px;
+  height: 70px;
+  display: flex
+;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  transition: all 0.3s;
+  background-color: rgb(255 255 255 / 10%);
+}
